add missing files!

--- a/advent-of-code/advent-of-code.csproj
+++ b/advent-of-code/advent-of-code.csproj
@@ -19,6 +19,9 @@
     <None Update="inputs\puzzle-2-1.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="inputs\puzzle-3-1.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
